<resources>
    <string name="app_name">SuperAgenteComercio</string>

    <!-- botones -->

    <string name="btn_salir">SALIR</string>
    <string name="btn_continuar">CONTINUAR</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_terminar">TERMINAR</string>
    <string name="btn_ingresar_otra_cuenta">INGRESAR OTRA CUENTA</string>
    <string name="btn_olvido_contrasenha">¿HA OLVIDADO SU CLAVE DE ACCESO?</string>
    <string name="btn_regresar">REGRESAR</string>
    <string name="btn_validar">VALIDAR</string>
    <string name="btn_anular_operacion">ANULAR OPERACION</string>
    <string name="tv_ok">OK</string>
    <string name="tv_rayitas">==========================================</string>

    <!-- pantalla de logeo del usuario del comercio -->

    <string name="titulo_acceso_sistema">ACCESO AL SISTEMA</string>
    <string name="tv_ingrese_num_celualr_login">INGRESE SU NUMERO DE CELULAR</string>
    <string name="tv_ingrese_clave_acceso_login">INGRESE SU CLAVE DE ACCESO</string>

    <!-- pantalla de terminos y condiciones del comercio -->

    <string name="titulo_terminos_condiciones">TÉRMINOS Y CONDICIONES DE USO - COMERCIO</string>
    <string name="rbtn_acepto_terminos_condiciones">ACEPTO TÉRMINOS Y CONDICIONES</string>
    <string name="tv_terminos">NO! utilice nuestros servicios de forma indebida. Por ejemplo, no interfiera en nustros Servicios ni intente diferente a la interfaz y las instrucciones que le proporcionamos.
    Puede utilizar nuestros servicios solo con las leyes y regulaciones correspondientes de control de exportacion y reexportacion. Podremos suspender el servicio si usted incumple nuestras condiciones o politicas o si estamos investigando una presunta confraternidad.
    El uso de nuestos servicios nos otrosga derechos de propiedad intelectual.</string>

    <!-- pantalla de ingreso de informacion del comercio -->

    <string name="titulo_ingreso_informacion_comercio">INGRESO DE INFORMACIÒN DEL COMERCIO</string>
    <string name="tv_representante">INGRESE REPRESENTANTE LEGAL:</string>
    <string name="tv_distrito">DISTRITO:</string>
    <string name="tv_ingrese_ruc_comercio">INGRESE RUC:</string>
    <string name="tv_ingrese_razon_social_comercio">INGRESE RAZÓN SOCIAL:</string>
    <string name="tv_ingrese_dni">INGRESE D.N.I.:</string>
    <string name="tv_departamento_comercio">DEPARTAMENTO:</string>
    <string name="tv_provincia_comercio">PROVINCIA:</string>
    <string name="tv_ingrese_direccion_comercio">INGRESE DIRECCIÓN</string>

    <!-- pantalla de clave de acceso del comercio -->

    <string name="titulo_afiliacion_comercio">AFILIACIÓN DE COMERCIO</string>
    <string name="tv_ingrese_clave_acceso">INGRESE SU CLAVE DE ACCESO</string>
    <string name="tv_confirme_clave_acceso">CONFIRME SU CLAVE DE ACCESO</string>
    <string name="tv_pregunta">PREGUNTA</string>
    <string name="tv_respuesta">RESPUESTA</string>
    <string name="tv_confirme">CONFIRME</string>
    <string name="tv_ingrese_correo_electronico">INGRESE SU CORREO ELECTRÓNICO</string>
    <string name="tv_ingrese_celular_acceso_internet">CELULAR CON ACCESO A INTERNET</string>

    <!-- pantalla de ingreso de cuentas del comercio -->

    <string name="titulo_ingreso_cuentas_comercio">INGRESO DE CUENTAS DEL COMERCIO</string>
    <string name="tv_cuentas_registradas">CUENTAS REGISTRADAS</string>
    <string name="rbtn_ahorros">AHORROS</string>
    <string name="rbtn_cuenta_corriente">CTA. CTE</string>
    <string name="tv_ingrese_numero_cuenta">INGRESE NÚMERO DE CUENTA</string>
    <string name="tv_codigo_interbancario">INGRESE CÓDIGO INTERBANCARIO</string>
    <string name="tv_tipo_cuenta">TIPO DE CUENTA</string>
    <string name="tv_banco">BANCO:</string>
    <string name="tv_moneda">MONEDA:</string>

    <!-- pantalla de registro de comercios -->

    <string name="titulo_registro_comercios">REGISTRO DE COMERCIOS</string>
    <string name="tv_comercios_registrados">COMERCIOS REGISTRADOS</string>

    <!-- Pantalla de Errores y mensajes -->

    <string name="tv_numero_celular_no_registrado">NÚMERO DE CELULAR NO REGISTRADO</string>
    <string name="tv_ingrese_num_celular">INGRESE SU NÚMERO DE CELULAR</string>
    <string name="tv_duda_queja">SI TIENES ALGUNA DUDA O INCONVENIENTE PUEDES LLAMARNOS AL:</string>
    <string name="tv_telefono_central_atencion_cliente">(511) 601-1360</string>
    <string name="tv_email_atencion_cliente">E-Mail</string>
    <string name="tv_correo_cliente_base_peru">correocliente@baseperu.com</string>

    <!-- Pantalla de Menu del Comercio -->

    <string name="titulo_menu_comercio">MENÚ DEL COMERCIO</string>
    <string name="tv_seleccione_operacion">SELECCIONE UNA OPERACION</string>
    <string name="btn_anulacion_menu">ANULACIÓN</string>
    <string name="btn_consulta_voucher">CONSULTA DE VOUCHERS</string>
    <string name="btn_reporte_movimientos">REPORTE DE MOVIMIENTOS</string>
    <string name="btn_agentes_contactos">AGENTES Y CONTACTOS</string>
    <string name="btn_facturacion_comercio">FACTURACIÓN DEL COMERCIO</string>
    <string name="btn_cambio_clave">CAMBIO DE CLAVE</string>
    <string name="btn_mantenimiento_menu">MANTENIMIENTO</string>

    <!-- Pantalla de olvido de contraseña del comercio-->

    <string name="titulo_recuperacion_clave">RECUPERACIÓN DE CLAVE</string>
    <string name="tv_ingrese_numero_celular">INGRESE SU NÚMERO DE CELULAR</string>
    <string name="tv_pregunta_autenticacion">PREGUNTA DE AUTENTICACIÓN</string>
    <string name="tv_ingrese_respuesta">INGRESE SU RESPUESTA</string>
    <string name="tv_ingrese_nueva_clave">INGRESE SU NUEVA CLAVE</string>
    <string name="tv_pregunta_secreta_olvidada">¿HA OLVIDADO SU PREGUNTA SECRETA?</string>

    <!-- Pantalla de cambio de clave exitosa -->

    <string name="titulo_cambio_clave_acceso_exitosa">CAMBIO DE CLAVE DE ACCESO EXITOSA</string>
    <string name="tv_confirmacion_operacion_cambio_clave">CONFIRMACIÓN DE OPERACIÓN DE CAMBIO DE CLAVE</string>
    <string name="tv_operacion_exitosa">OPERACIÓN EXITOSA</string>
    <string name="tv_clave_cambiada_exito">SU CLAVE HA SIDO CAMBIADA CON ÉXITO</string>

    <!-- Pantalla de calbio de clave de acceso -->

    <string name="titulo_cambio_clave_acceso">CAMBIO DE CLAVE DE ACCESO</string>
    <string name="tv_ingrese_clave_acceso_actual">INGRESE SU CLAVE DE ACCESO ACTUAL</string>
    <string name="tv_primera_pregunta">PREGUNTA SECRETA</string>
    <string name="tv_responda_pregunta">RESPONDA PREGUNTA</string>
    <string name="tv_ingrese_nueva_clave_acceso">INGRESE NUEVA CLAVE DE ACCESO</string>
    <string name="tv_confirme_nueva_clave_acceso">CONFIRME NUEVA CLAVE DE ACCESO</string>
    <string name="title_activity_listar_operario">ListarOperario</string>

    <!-- Pantalla de listado de voucher de anulaciones -->

    <string name="titulo_listado_voucher_anulaciones">LISTADO DE VOUCHER DE ANULACIONES</string>

    <!-- Pantalla de Detalle del consumo -->

    <string name="titulo_detalle_consumo">DETALLE DEL CONSUMO</string>
    <string name="tv_superagente_voucher">*** SÚPER AGENTE ***</string>
    <string name="tv_numero_unico_voucher">NÚMERO ÚNICO:</string>
    <string name="tv_fecha_voucher_consumo">FECHA:</string>
    <string name="tv_hora_voucher_consumo">HORA:</string>
    <string name="tv_nro_unico_voucher_consumo">NRO. ÚNICO:</string>
    <string name="tv_importe_voucher_consumo">IMPORTE:</string>
    <string name="tv_banco_voucher_consumo">BANCO:</string>
    <string name="tv_datos_comercio_consumo">DATOS DEL COMERCIO</string>
<<<<<<< Updated upstream
=======

>>>>>>> Stashed changes
    <!-- Pantalla de Lista de Operarios -->

    <string name="titulo_lista_operario">LISTADO DE OPERARIOS</string>
    <string name="title_activity_agregar_operario">AgregarOperario</string>
<<<<<<< Updated upstream
=======

    <!-- Pantalla de Reporte de movimientos -->

    <string name="titulo_reporte_movimientos">REPORTE DE MOVIMIENTOS</string>
>>>>>>> Stashed changes

</resources>
