<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.MenuCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_menu_comercio"
            android:textColor="@color/color_blanco"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_seleccione_operacion"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayoutPagos"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_blanco"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_anulacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_anulacion_menu" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_consulta_voucher" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reporte_movimientos" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_agentes_contactos" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_facturacion_comercio" />

                <Button
                    android:id="@+id/btn_cambio_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cambio_clave" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/btn_salir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_salir"
                    android:background="@color/color_blanco"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
