<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.IngresoCuentasComercio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_ingreso_cuentas_comercio"
            android:textColor="@color/color_blanco"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cuentas_registradas" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_cuenta_ahorros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_ahorros" />

                <RadioButton
                    android:id="@+id/rbtn_cuenta_corriente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_cuenta_corriente" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Spinner
                    android:id="@+id/sp_banco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/sp_moneda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_ingrese_numero_cuenta" />

            <EditText
                android:id="@+id/txt_numero_cuenta"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_amarillo" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_aceptar"
                    android:layout_weight="1"
                    android:id="@+id/btn_aceptar"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@color/color_blanco"
                    android:text="@string/btn_cancelar"
                    android:layout_weight="1"
                    android:id="@+id/btn_cancelar"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
