<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.TerminosCondiciones">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewInfoElectronica"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_terminos_condiciones"
            android:textColor="@color/color_blanco"
            android:textSize="16dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="320dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0.62"
                android:background="@drawable/borders"
                android:gravity="center"
                android:text="@string/tv_terminos" />

            <RadioButton
                android:id="@+id/radioTerminosCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:text="@string/rbtn_acepto_terminos_condiciones" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btn_salir"
                android:background="@color/color_blanco"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
