<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.administrador.superagentecomercio.superagente.AfiliacionComercio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/titulo_afiliacion_comercio"
            android:textColor="@color/color_blanco"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/broder_comercio"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ingrese_clave_acceso" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/txt_clave_acceso"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color_blanco"
                    android:inputType="textPassword"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_confirme_clave_acceso" />

                <EditText
                    android:id="@+id/txt_confirma_clave_acceso"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color_blanco"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/broder_comercio"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_pregunta" />

                    <Spinner
                        android:id="@+id/sp_pregunta"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_respuesta" />

                    <EditText
                        android:id="@+id/txt_respuesta"
                        android:layout_width="160dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="35dp"
                        android:background="@color/color_blanco"
                        android:singleLine="true"
                        android:inputType="textPassword"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_confirme" />

                    <EditText
                        android:id="@+id/txt_confirme"
                        android:layout_width="160dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="44dp"
                        android:background="@color/color_blanco"
                        android:singleLine="true"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/broder_comercio"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ingrese_correo_electronico" />

                <EditText
                    android:id="@+id/txt_correo_electronico"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color_blanco"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_ingrese_celular_acceso_internet" />

                <EditText
                    android:id="@+id/txt_celular"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/color_blanco"
                    android:singleLine="true"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_continuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/color_blanco"
                android:text="@string/btn_continuar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
